--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"],
+  "paths": {
+    "@/*": ["src/*"]
+  },
+  "include": ["src"]
 }
